--- a/login.html
+++ b/login.html
@@ -13,9 +13,9 @@
         :root {
             --white: #ffffff ;
             --black: #000000; 
-            --very-light-pink: #c7c7c7;
+            --very-light-pink: #96b5b0;
             --text-input-field: #f7f7f7;
-            --hospital-green: #acd9b2;
+            --palo-rosa: #fa9c80;
             --sm: 14px;
             --md:16px;
             --lg:18px
@@ -41,7 +41,7 @@
 
         .logo {
             width: 150px;
-            margin-bottom: 48px;
+            margin-bottom: -18px;
             justify-self: center;
             display: none;
         }
@@ -84,7 +84,7 @@
         }
 
         .primary-button { 
-            background-color: var(--hospital-green);
+            background-color: var(--palo-rosa);
             border-radius: 8px;
             border: none;
             color: var(--white);
@@ -110,7 +110,7 @@
 <body>
     <div class="login">
         <div class="form-container">
-            <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+            <img src="https://i.postimg.cc/Kj9Kdh3L/LOGO-DULCECAT-Mesa-de-trabajo-1.png" alt="logo" class="logo">
 
             <h1 class="title">Create a new password</h1>
             <p class="subtitle">Enter a new password for you account</p>
