--- a/password-recovery2.html
+++ b/password-recovery2.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>Login</title>
+    <title>Password recovery</title>
     
     <style>
         :root {
@@ -35,6 +35,7 @@
 
         .form-container {
             display: grid;
+            justify-items: center;
             grid-template-rows: auto 1fr auto;
             width: 300px;
         }
@@ -61,26 +62,32 @@
             text-align: center;
         }
 
-        .form {
+        .email-image {
             display: flex;
-            flex-direction: column;
-            margin-bottom: 12px;
+            justify-content: center;
+            align-items: center;
+            width: 132px;
+            height: 132px;
+            margin-bottom: 24px;
+            border-radius: 50%;
+            background-color: var(--text-input-field) ;
         }
 
-        .label {
+        .email-image img {
+            width: 80px;
+        }
+
+        .resend {
             font-size: var(--sm);
-            font-weight: bold;
-            margin-bottom: 4px;
-
         }
-        .input { 
-            background-color: var(--text-input-field);
-            border: none;
-            border-radius: 8px;
-            height: 30px;
-            font-size: var(--md);
-            padding: 6px;
-            margin-bottom: 12px;
+
+        .resend span {
+            color: var(--very-light-pink);
+        }
+
+        .resend a {
+            color: var(--palo-rosa);
+            text-decoration: none;
         }
 
         .primary-button { 
@@ -97,7 +104,6 @@
 
         .login-button {
             margin-top: 14px;
-            margin-bottom: 30px;
         }
         @media (max-width: 640px) {
             .logo {
@@ -112,19 +118,19 @@
         <div class="form-container">
             <img src="https://i.postimg.cc/Kj9Kdh3L/LOGO-DULCECAT-Mesa-de-trabajo-1.png" alt="logo" class="logo">
 
-            <h1 class="title">Create a new password</h1>
-            <p class="subtitle">Enter a new password for you account</p>
+            <h1 class="title">Email has been sent!</h1>
+            <p class="subtitle">Please check your inbox for instructions on how to reset the password</p>
 
-            <form action="/" class="form">
-                <label for="password" class="label">Password </label>
-                <input type="password" id="password" placeholder="*********" class="input input-password">
+            <div class="email-image">
+                <img src="./icons/email.svg" alt="email-icon">
+            </div>
 
-                <label for="new-password" class="label">Re-enter Password </label>
-                <input type="new-password" id="new-password" placeholder="*********" class="input input-password">
+            <button class="primary-button login-button">Login</button>
 
-                <input type="submit" value="Confirm" class="primary-button login-button">
-            </form>
-
+            <p class="resend">
+                <span>Didn’t receive the email?</span> 
+                <a href="">Resend</a>
+            </p>
         </div>
     </div>
 </body>
