--- a/menu-mobile.html
+++ b/menu-mobile.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+
     <title>Document</title>
 
     <style>
@@ -23,7 +28,6 @@
             margin: 0;
             font-family: 'Quicksand', sans-serif;
         }
-
         .mobile-menu {
             padding: 24px;
         }
@@ -48,19 +52,15 @@
             margin-bottom: 24px;
         }
 
+
         .mobile-menu .email {
             font-size: var(--sm);
             font-weight: 300;
         } 
-        .mobile-menu .email ul li{
-            margin-bottom: 10px;
-        } 
         .mobile-menu .sign-out {
             font-size: var(--sm);
             color: var(--palo-rosa);
-        }
-
-        
+        } 
     </style>
 
 </head>
