--- a/My-order.html
+++ b/My-order.html
@@ -25,41 +25,136 @@
         body { 
             margin: 0;
             font-family: 'Quicksand', sans-serif;
+        }     
+        .my-order {
+            display: grid;
+            place-items: center;
+            width: 100%;
+            height: 100vh;
+        }
+        .title {
+            margin-bottom: 40px;
+            font-size: var(--lg);
+        }
+        .my-order-container{
+            display: grid;
+            grid-template-rows: auto 1fr auto;
+            width: 300px;
+        }
+        .my-order-content {
+            display: flex;
+            flex-direction: column;
+        }
+        .order {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            align-items: center;
+            gap: 16px;
+            padding: 0 24px;
+            margin-bottom: 24px;
+            border-radius: 8px;
+            background: var(--text-input-field);
+        }
+        .order p:nth-child(1) {
+            display: flex;
+            flex-direction: column;
+        }
+        .order p:nth-child(2) {
+            text-align: end;
+            font-weight: bold;
+        }
+        .order p span:nth-child(1) {
+            font-size: var(--md);
+            font-weight: bold;
+        }
+        .order p span:nth-child(2) {
+            font-size: var(--sm);
+            color: var(--very-light-pink);
+        }
+        .shopping-card {
+            display: grid;
+            grid-template-columns: auto 1fr auto auto;
+            margin-bottom: 24px;
+            align-items: center;
+            gap: 16px;
+        }
+        .shopping-card figure {
+            margin: 0;
+        }
+        .shopping-card figure img {
+            width: 70px;
+            height: 70px;
+            border-radius: 20px;
+            object-fit: cover;
+        }
+        .shopping-card p:nth-child(2) {
+            color: var(--very-light-pink);
+        }
+        .shopping-card p:nth-child(3) {
+            font-size: var(--md);
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <div class="my-order">
         <div class="my-order-container">
-            <div class="my-order-content">
-                <p>
-                    <span>04-15-21</span>
-                    <span>6 articles</span>
-                </p>
-                <p>$560.00</p>
-            </div>
+            <h1 class="title">My order</h1>
 
-            <div class="shopping-card">
-                <figure>
-                    <img src="https://lh3.googleusercontent.com/5VJAeXHYtrIIroS5NJRE5sOw8ajB9HT2k6u97Ed8tJuim5X3aTJJrfLknx3SI45hOigHeTE3EwxGjDz-Boa79VtyGGqs_4JhKVt0cZKKRM4blI8IXOSyX6ywCLa4jm2qavvWv9e4i_LKUNgtDmQeRSqodjBNCfO5F8IgR6mJg6UPjUQU8_56C9b56ocFgeTLuIaRmwlI59bAjFh-H1SHHt-7dtlVN-2FG2slY_8yhnSO1b0rEedURLJ7aoImBACM_iSVuDVTuuCOrmEEguEvc_WcpD7-H77OjOfYxgzW9476JVttaYBPgpFtJhnMukBLU-fbjKo8oQvfMnEoU51BWAt7Ih_okVpX6zuEisbDWlof4zmWgbwzgzypBJvzI4TOaT9ZOqYhlNZVoc8pj_YoakQT4K6sp5j-30TIOCIjpJmqQX4E45s-t57zQ2C2DZpBmXUDrdIkZ6rnh_gwfkhTrNOEqtgEaqGHGC_mY3sjr2lAXYl6a6yOG3d8qTVeXKIcGLd3Hh9J5pxjq14aZ5665SMBVo0DNumq-NUs-NJkY7C1Fcnq7xtLBSjXq4Dp_dgPUywoi1cCc401cM2ig8ZpcHhC93UZBEIeUgTO1ORtz6PAVljFF8ikdiWPYZCpG2VMNKVuC9O2jXjN9h8L_S-iYUe_PaK_z0rCNCdd_xojUtcSxq7sexIcIbw6yfCX4vNhXmsuqi17ROKvDjJ0dNkFkLNQWmUUt5gFJBIvEvT_O2K-spJ6nfKZ1iaLx-Ljwo0d42lFIdea0qWKX8IpC8ZLKrYhZ3FtxRGmB1QK1Q=w644-h857-no?authuser=0" alt="Reloj de gato" class="product-img">
-                </figure>
-                <p>Reloj de Escritorio</p>
-                <p>$30,00</p>
-            </div>
-            <div class="shopping-card">
-                <figure>
-                    <img src="https://lh3.googleusercontent.com/5VJAeXHYtrIIroS5NJRE5sOw8ajB9HT2k6u97Ed8tJuim5X3aTJJrfLknx3SI45hOigHeTE3EwxGjDz-Boa79VtyGGqs_4JhKVt0cZKKRM4blI8IXOSyX6ywCLa4jm2qavvWv9e4i_LKUNgtDmQeRSqodjBNCfO5F8IgR6mJg6UPjUQU8_56C9b56ocFgeTLuIaRmwlI59bAjFh-H1SHHt-7dtlVN-2FG2slY_8yhnSO1b0rEedURLJ7aoImBACM_iSVuDVTuuCOrmEEguEvc_WcpD7-H77OjOfYxgzW9476JVttaYBPgpFtJhnMukBLU-fbjKo8oQvfMnEoU51BWAt7Ih_okVpX6zuEisbDWlof4zmWgbwzgzypBJvzI4TOaT9ZOqYhlNZVoc8pj_YoakQT4K6sp5j-30TIOCIjpJmqQX4E45s-t57zQ2C2DZpBmXUDrdIkZ6rnh_gwfkhTrNOEqtgEaqGHGC_mY3sjr2lAXYl6a6yOG3d8qTVeXKIcGLd3Hh9J5pxjq14aZ5665SMBVo0DNumq-NUs-NJkY7C1Fcnq7xtLBSjXq4Dp_dgPUywoi1cCc401cM2ig8ZpcHhC93UZBEIeUgTO1ORtz6PAVljFF8ikdiWPYZCpG2VMNKVuC9O2jXjN9h8L_S-iYUe_PaK_z0rCNCdd_xojUtcSxq7sexIcIbw6yfCX4vNhXmsuqi17ROKvDjJ0dNkFkLNQWmUUt5gFJBIvEvT_O2K-spJ6nfKZ1iaLx-Ljwo0d42lFIdea0qWKX8IpC8ZLKrYhZ3FtxRGmB1QK1Q=w644-h857-no?authuser=0" alt="Reloj de gato" class="product-img">
-                </figure>
-                <p>Reloj de Escritorio</p>
-                <p>$30,00</p>
-            </div>
-            <div class="shopping-card">
-                <figure>
-                    <img src="https://lh3.googleusercontent.com/5VJAeXHYtrIIroS5NJRE5sOw8ajB9HT2k6u97Ed8tJuim5X3aTJJrfLknx3SI45hOigHeTE3EwxGjDz-Boa79VtyGGqs_4JhKVt0cZKKRM4blI8IXOSyX6ywCLa4jm2qavvWv9e4i_LKUNgtDmQeRSqodjBNCfO5F8IgR6mJg6UPjUQU8_56C9b56ocFgeTLuIaRmwlI59bAjFh-H1SHHt-7dtlVN-2FG2slY_8yhnSO1b0rEedURLJ7aoImBACM_iSVuDVTuuCOrmEEguEvc_WcpD7-H77OjOfYxgzW9476JVttaYBPgpFtJhnMukBLU-fbjKo8oQvfMnEoU51BWAt7Ih_okVpX6zuEisbDWlof4zmWgbwzgzypBJvzI4TOaT9ZOqYhlNZVoc8pj_YoakQT4K6sp5j-30TIOCIjpJmqQX4E45s-t57zQ2C2DZpBmXUDrdIkZ6rnh_gwfkhTrNOEqtgEaqGHGC_mY3sjr2lAXYl6a6yOG3d8qTVeXKIcGLd3Hh9J5pxjq14aZ5665SMBVo0DNumq-NUs-NJkY7C1Fcnq7xtLBSjXq4Dp_dgPUywoi1cCc401cM2ig8ZpcHhC93UZBEIeUgTO1ORtz6PAVljFF8ikdiWPYZCpG2VMNKVuC9O2jXjN9h8L_S-iYUe_PaK_z0rCNCdd_xojUtcSxq7sexIcIbw6yfCX4vNhXmsuqi17ROKvDjJ0dNkFkLNQWmUUt5gFJBIvEvT_O2K-spJ6nfKZ1iaLx-Ljwo0d42lFIdea0qWKX8IpC8ZLKrYhZ3FtxRGmB1QK1Q=w644-h857-no?authuser=0" alt="Reloj de gato" class="product-img">
-                </figure>
-                <p>Reloj de Escritorio</p>
-                <p>$30,00</p>
-            </div>
+            <div class="my-order-content">
+
+                <div class="order">
+                    <p>
+                        <span>08-09-22</span>
+                        <span>6 articles</span>
+                    </p>
+                    <p>$180.00</p>                    
+                </div>
+
+                <div class="shopping-card">
+                    <figure>
+                        <img src="https://lh3.googleusercontent.com/5VJAeXHYtrIIroS5NJRE5sOw8ajB9HT2k6u97Ed8tJuim5X3aTJJrfLknx3SI45hOigHeTE3EwxGjDz-Boa79VtyGGqs_4JhKVt0cZKKRM4blI8IXOSyX6ywCLa4jm2qavvWv9e4i_LKUNgtDmQeRSqodjBNCfO5F8IgR6mJg6UPjUQU8_56C9b56ocFgeTLuIaRmwlI59bAjFh-H1SHHt-7dtlVN-2FG2slY_8yhnSO1b0rEedURLJ7aoImBACM_iSVuDVTuuCOrmEEguEvc_WcpD7-H77OjOfYxgzW9476JVttaYBPgpFtJhnMukBLU-fbjKo8oQvfMnEoU51BWAt7Ih_okVpX6zuEisbDWlof4zmWgbwzgzypBJvzI4TOaT9ZOqYhlNZVoc8pj_YoakQT4K6sp5j-30TIOCIjpJmqQX4E45s-t57zQ2C2DZpBmXUDrdIkZ6rnh_gwfkhTrNOEqtgEaqGHGC_mY3sjr2lAXYl6a6yOG3d8qTVeXKIcGLd3Hh9J5pxjq14aZ5665SMBVo0DNumq-NUs-NJkY7C1Fcnq7xtLBSjXq4Dp_dgPUywoi1cCc401cM2ig8ZpcHhC93UZBEIeUgTO1ORtz6PAVljFF8ikdiWPYZCpG2VMNKVuC9O2jXjN9h8L_S-iYUe_PaK_z0rCNCdd_xojUtcSxq7sexIcIbw6yfCX4vNhXmsuqi17ROKvDjJ0dNkFkLNQWmUUt5gFJBIvEvT_O2K-spJ6nfKZ1iaLx-Ljwo0d42lFIdea0qWKX8IpC8ZLKrYhZ3FtxRGmB1QK1Q=w644-h857-no?authuser=0" alt="Reloj de gato" class="product-img">
+                    </figure>
+                    <p>Reloj de Escritorio Perzonalizado</p>
+                    <p>$38,00</p>
+                </div>
+                <div class="shopping-card">
+                    <figure>
+                        <img src="https://lh3.googleusercontent.com/P71WvBzkzSmVsRh87h1b8l7xbhFQ0bl8DJ51yZ6ePzm2PeKONDq4PZhFaV14ugXmOVyuan66WnDyvJcnrMkDebk1toYueuM-Mx9HFIpzZlAyJjQSwEgwo7NCD-N8HlzZNvO2v8R_1nEQXbkxZWwrfDZXY3eMOq7KUTMsYezzA-kdcjS-UA2JjkifVYZj0x03AASaA8BJRCx0vOuIsn3YJFtzKtLh7s7TRVi6pMer9_ZmJu0hk8f-Xfb_XAOCoSPdykkYx2ypGiPSP5Vr6sIJ8ZQyH8_vd73SVCmUGx43Qd5Z4PKplolupuS8m9Erle9rbIU103fNklWULz5CqJaSbAdQeSHcjkfap21KKI_4nBA0uOrbA4vB2B1NK4dm4T1QLjKkTixjVqyPR9L6vYt9ibGyKNt829Ow4xg2g0O28J5LVVMSRyeak4dro-KPax-At1xHpkE5ZeHZkzdJyePBJmpKM5_fpP-8Ah_FAFxn6GhnNz7t6pe_K4szSdvnoFeXE73d7w1tA6oNcp_SpzOMWPoLlpAtAxQySoijHf5nuik-zYda_HOlHqkgfulksArTOseeLwUYAUA_CiWZxSf6zTCusWA9Q15d5OoaDo9zPIYDIyO0sIvygyZV-HWNAwFhBhc1_rFOb7DDzRmArio3ACN-0kdVCyCjSLI2WoAhNrSauzkArSrh-rXq6v9ymCe3t7hA03ri05DZkuKkXIr3gnExpSjBwcp97YdS_IoPIobyUnUV_1itZIIj4P7g8h3yuycFP2IB9Ns6WaJqpp96dFQx8zku0-JeeOzMGQ=w910-h841-no?authuser=0" alt="" class="product-img">
+                    </figure>
+                    <p>Reloj de Escritorio</p>
+                    <p>$25,00</p>
+                </div>
+                <div class="shopping-card">
+                    <figure>
+                        <img src="https://lh3.googleusercontent.com/t0QAVqOPKmHTnYolk4qp2payli_3ryMuYclFzO5F3-Rwa4z9H0b6w6FyX572TRq4NaVmdu6EmMMfySG8FEbLZjjH9bhfwpajVkl68HUk15EAHo9H_1obkeGLz9LfBO-wbTdWxOWFfbw62Zyhm_hEW2bzhDAOeVsVRbf2-fRXOAgDxFb3h2iQGPby5b3-EZ4llKgFu_7s6tVKi7vq41StyqpDGjW568bfmsOQxQUYpYacRrL69h1VZ2LqyxdsCfCfeBSf1cJIUIt5UGTDa12MNvtqSbzUyFqNUkhsmTcNuvVHS9T-zMlcJIN06-5YrV1x3y9NKrsBumDCPqVf30I4xHQ9mouiKaahuLY7MM25wYLy7i07iUVafxXZlQQ7b5C5L4QikeRgcoBlsWyZfxEtZN6hAWVuj7sNJBDZV4Mf8H01H01WPEBL8TUyxKqpYPfNKdc6y0kF5MRhfUVOT41hfFqs2K_iV3qQYWb8hIUvigyVxlUbJgZ6RE_D0lCnwhKtu9auH4rv3jXyY59ztfH6r1axXArWVCW069uHYgjlJMz-PRu9IQ56EiSEZ8xy5xspxLDmPvnrNYm2JSXbbGbH6u3TfRjlgrjm9N_IWk_U1VoITNhbR6LEfBE1MJhw8bXJwq27FGj5iAAyg6A_Mwd_jrgP1H9mKmYVyx95CVTo9eY1cGtwhoVb3i0u25h7S1lfcnQTwJg8sOVYRue8hWhXmsXrDkurPJDlzON8BRXrww6OqCmrPda64zCSCp0m2WEnoYYtIlwik1XWHlw7GB35HyXZ39yE0KUSui9f8A=s857-no?authuser=0" alt="" class="product-img">
+                    </figure>
+                    <p>Reloj dos gatitos Perzonalizado</p>
+                    <p>$30,00</p>
+                </div>
+                <div class="shopping-card">
+                    <figure>
+                        <img src="https://lh3.googleusercontent.com/5VJAeXHYtrIIroS5NJRE5sOw8ajB9HT2k6u97Ed8tJuim5X3aTJJrfLknx3SI45hOigHeTE3EwxGjDz-Boa79VtyGGqs_4JhKVt0cZKKRM4blI8IXOSyX6ywCLa4jm2qavvWv9e4i_LKUNgtDmQeRSqodjBNCfO5F8IgR6mJg6UPjUQU8_56C9b56ocFgeTLuIaRmwlI59bAjFh-H1SHHt-7dtlVN-2FG2slY_8yhnSO1b0rEedURLJ7aoImBACM_iSVuDVTuuCOrmEEguEvc_WcpD7-H77OjOfYxgzW9476JVttaYBPgpFtJhnMukBLU-fbjKo8oQvfMnEoU51BWAt7Ih_okVpX6zuEisbDWlof4zmWgbwzgzypBJvzI4TOaT9ZOqYhlNZVoc8pj_YoakQT4K6sp5j-30TIOCIjpJmqQX4E45s-t57zQ2C2DZpBmXUDrdIkZ6rnh_gwfkhTrNOEqtgEaqGHGC_mY3sjr2lAXYl6a6yOG3d8qTVeXKIcGLd3Hh9J5pxjq14aZ5665SMBVo0DNumq-NUs-NJkY7C1Fcnq7xtLBSjXq4Dp_dgPUywoi1cCc401cM2ig8ZpcHhC93UZBEIeUgTO1ORtz6PAVljFF8ikdiWPYZCpG2VMNKVuC9O2jXjN9h8L_S-iYUe_PaK_z0rCNCdd_xojUtcSxq7sexIcIbw6yfCX4vNhXmsuqi17ROKvDjJ0dNkFkLNQWmUUt5gFJBIvEvT_O2K-spJ6nfKZ1iaLx-Ljwo0d42lFIdea0qWKX8IpC8ZLKrYhZ3FtxRGmB1QK1Q=w644-h857-no?authuser=0" alt="Reloj de gato" class="product-img">
+                    </figure>
+                    <p>Reloj de Escritorio Perzonalizado</p>
+                    <p>$38,00</p>
+                </div>
+                <div class="shopping-card">
+                    <figure>
+                        <img src="https://lh3.googleusercontent.com/P71WvBzkzSmVsRh87h1b8l7xbhFQ0bl8DJ51yZ6ePzm2PeKONDq4PZhFaV14ugXmOVyuan66WnDyvJcnrMkDebk1toYueuM-Mx9HFIpzZlAyJjQSwEgwo7NCD-N8HlzZNvO2v8R_1nEQXbkxZWwrfDZXY3eMOq7KUTMsYezzA-kdcjS-UA2JjkifVYZj0x03AASaA8BJRCx0vOuIsn3YJFtzKtLh7s7TRVi6pMer9_ZmJu0hk8f-Xfb_XAOCoSPdykkYx2ypGiPSP5Vr6sIJ8ZQyH8_vd73SVCmUGx43Qd5Z4PKplolupuS8m9Erle9rbIU103fNklWULz5CqJaSbAdQeSHcjkfap21KKI_4nBA0uOrbA4vB2B1NK4dm4T1QLjKkTixjVqyPR9L6vYt9ibGyKNt829Ow4xg2g0O28J5LVVMSRyeak4dro-KPax-At1xHpkE5ZeHZkzdJyePBJmpKM5_fpP-8Ah_FAFxn6GhnNz7t6pe_K4szSdvnoFeXE73d7w1tA6oNcp_SpzOMWPoLlpAtAxQySoijHf5nuik-zYda_HOlHqkgfulksArTOseeLwUYAUA_CiWZxSf6zTCusWA9Q15d5OoaDo9zPIYDIyO0sIvygyZV-HWNAwFhBhc1_rFOb7DDzRmArio3ACN-0kdVCyCjSLI2WoAhNrSauzkArSrh-rXq6v9ymCe3t7hA03ri05DZkuKkXIr3gnExpSjBwcp97YdS_IoPIobyUnUV_1itZIIj4P7g8h3yuycFP2IB9Ns6WaJqpp96dFQx8zku0-JeeOzMGQ=w910-h841-no?authuser=0" alt="" class="product-img">
+                    </figure>
+                    <p>Reloj de Escritorio</p>
+                    <p>$25,00</p>
+                </div>
+                <div class="shopping-card">
+                    <figure>
+                    <img src="https://lh3.googleusercontent.com/t0QAVqOPKmHTnYolk4qp2payli_3ryMuYclFzO5F3-Rwa4z9H0b6w6FyX572TRq4NaVmdu6EmMMfySG8FEbLZjjH9bhfwpajVkl68HUk15EAHo9H_1obkeGLz9LfBO-wbTdWxOWFfbw62Zyhm_hEW2bzhDAOeVsVRbf2-fRXOAgDxFb3h2iQGPby5b3-EZ4llKgFu_7s6tVKi7vq41StyqpDGjW568bfmsOQxQUYpYacRrL69h1VZ2LqyxdsCfCfeBSf1cJIUIt5UGTDa12MNvtqSbzUyFqNUkhsmTcNuvVHS9T-zMlcJIN06-5YrV1x3y9NKrsBumDCPqVf30I4xHQ9mouiKaahuLY7MM25wYLy7i07iUVafxXZlQQ7b5C5L4QikeRgcoBlsWyZfxEtZN6hAWVuj7sNJBDZV4Mf8H01H01WPEBL8TUyxKqpYPfNKdc6y0kF5MRhfUVOT41hfFqs2K_iV3qQYWb8hIUvigyVxlUbJgZ6RE_D0lCnwhKtu9auH4rv3jXyY59ztfH6r1axXArWVCW069uHYgjlJMz-PRu9IQ56EiSEZ8xy5xspxLDmPvnrNYm2JSXbbGbH6u3TfRjlgrjm9N_IWk_U1VoITNhbR6LEfBE1MJhw8bXJwq27FGj5iAAyg6A_Mwd_jrgP1H9mKmYVyx95CVTo9eY1cGtwhoVb3i0u25h7S1lfcnQTwJg8sOVYRue8hWhXmsXrDkurPJDlzON8BRXrww6OqCmrPda64zCSCp0m2WEnoYYtIlwik1XWHlw7GB35HyXZ39yE0KUSui9f8A=s857-no?authuser=0" alt="" class="product-img">
+                    </figure>
+                    <p>Reloj dos gatitos Perzonalizado</p>
+                    <p>$30,00</p>   
+                </div>
+
+            </div>            
         </div>
     </div>
 </body>
