Fusion del menú en mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav>
-        <img src="./icons/icon_menu.svg" alt="menu" class="menu">
+        <img src="./icons/icon_menu.svg" alt="menu" class="menu ">
         
         <div class="navbar-left">
             <img src="https://i.postimg.cc/Kj9Kdh3L/LOGO-DULCECAT-Mesa-de-trabajo-1.png" alt="logo" class="logo">
@@ -64,6 +64,49 @@
                 </li>
                 <li>
                     <a href="/">Sign out</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="mobile-menu inactive">
+            <ul>
+                <li>
+                    <a href="/">CATEGORIES</a>
+                </li>
+                <li>
+                    <a href="/">All</a>
+                </li>
+                <li>
+                    <a href="/">Portallaves</a>
+                </li>
+                <li>
+                    <a href="/">Relojes</a>
+                </li>
+                <li>
+                    <a href="/">Portavasos</a>
+                </li>
+                <li>
+                    <a href="/">Retratos</a>
+                </li>
+                <li>
+                    <a href="/">Others</a>
+                </li>
+            </ul>
+    
+            <ul>
+                <li>
+                    <a href="/">My orders</a>
+                </li>
+                <li>
+                    <a href="/">My account</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="/" class="email">camilayokoo@gmail.com</a>
+                </li>
+                <li>
+                    <a href="/" class="sign-out">Sign out</a>
                 </li>
             </ul>
         </div>
