Integre el carrito de comprar al navbar principal, tanto en version mobile como en desktop

--- a/index.html
+++ b/index.html
@@ -112,6 +112,59 @@
         </div>
     </nav>
 
+    <aside class="product-detail inactive">
+        <div class="title-container">
+            <img src="./icons/flechita.svg" alt="Arrow">
+            <p class="title">My order</p>
+        </div>
+
+        <div class="my-order-content">
+            <div class="shopping-card">
+                <figure>
+                    <img src="https://i.postimg.cc/FKFnR1rR/IMG-20201106-WA0006.jpg" alt="Reloj de gato" class="product-img">
+                </figure>
+                <p>Reloj de Escritorio Perzonalizado</p>
+                <p>$38,00</p>
+                <img src="./icons/icon_close.png" alt="">
+            </div>
+            <div class="shopping-card">
+                <figure>
+                    <img src="https://i.postimg.cc/tgrvVyJz/IMG-20201125-142706.jpg" alt="Reloj de gato" class="product-img">
+                </figure>
+                <p>Reloj de Escritorio Perzonalizado</p>
+                <p>$38,00</p>
+                <img src="./icons/icon_close.png" alt="">
+            </div>
+            <div class="shopping-card">
+                <figure>
+                    <img src="https://i.postimg.cc/zB6d0jnb/IMG-20201217-144151.jpg" alt="Reloj de gato" class="product-img">
+                </figure>
+                <p>Reloj de Escritorio Perzonalizado</p>
+                <p>$38,00</p>
+                <img src="./icons/icon_close.png" alt="">
+            </div>
+            <div class="shopping-card">
+                <figure>
+                    <img src="https://i.postimg.cc/QMxh3Xvg/IMG-20201217-144234.jpg" alt="" class="product-img">
+                </figure>
+                <p>Reloj dos gatitos Perzonalizado</p>
+                <p>$30,00</p>
+                <img src="./icons/icon_close.png" alt="">
+            </div>
+
+            <div class="order">
+                <p>
+                    <span>Total</span>
+                </p>
+                <p>$180.00</p>                    
+            </div>
+            <button class="primary-button">
+                Checkout
+            </button>
+        </div>      
+
+    </aside>
+
     <script src="./main.js"></script>
 </body>
 </html>
