Se integro los productos a nuestra pagina principal

--- a/index.html
+++ b/index.html
@@ -165,6 +165,27 @@
 
     </aside>
 
+    <section class="main-container">
+        <div class="cards-container">
+
+       <!-- <div class="product-card">
+                <img src="https://i.postimg.cc/QMxh3Xvg/IMG-20201217-144234.jpg" alt="" class="product-img">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p> 
+                        <p>Reloj de mesa</p>                         
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div> -->
+
+
+
+        </div>
+    </section>
+
     <script src="./main.js"></script>
 </body>
 </html>
