--- a/product-detail.html
+++ b/product-detail.html
@@ -104,7 +104,7 @@
             <img src="./icons/icon_close.png" alt=""> 
         </div>
 
-        <img src="https://lh3.googleusercontent.com/5VJAeXHYtrIIroS5NJRE5sOw8ajB9HT2k6u97Ed8tJuim5X3aTJJrfLknx3SI45hOigHeTE3EwxGjDz-Boa79VtyGGqs_4JhKVt0cZKKRM4blI8IXOSyX6ywCLa4jm2qavvWv9e4i_LKUNgtDmQeRSqodjBNCfO5F8IgR6mJg6UPjUQU8_56C9b56ocFgeTLuIaRmwlI59bAjFh-H1SHHt-7dtlVN-2FG2slY_8yhnSO1b0rEedURLJ7aoImBACM_iSVuDVTuuCOrmEEguEvc_WcpD7-H77OjOfYxgzW9476JVttaYBPgpFtJhnMukBLU-fbjKo8oQvfMnEoU51BWAt7Ih_okVpX6zuEisbDWlof4zmWgbwzgzypBJvzI4TOaT9ZOqYhlNZVoc8pj_YoakQT4K6sp5j-30TIOCIjpJmqQX4E45s-t57zQ2C2DZpBmXUDrdIkZ6rnh_gwfkhTrNOEqtgEaqGHGC_mY3sjr2lAXYl6a6yOG3d8qTVeXKIcGLd3Hh9J5pxjq14aZ5665SMBVo0DNumq-NUs-NJkY7C1Fcnq7xtLBSjXq4Dp_dgPUywoi1cCc401cM2ig8ZpcHhC93UZBEIeUgTO1ORtz6PAVljFF8ikdiWPYZCpG2VMNKVuC9O2jXjN9h8L_S-iYUe_PaK_z0rCNCdd_xojUtcSxq7sexIcIbw6yfCX4vNhXmsuqi17ROKvDjJ0dNkFkLNQWmUUt5gFJBIvEvT_O2K-spJ6nfKZ1iaLx-Ljwo0d42lFIdea0qWKX8IpC8ZLKrYhZ3FtxRGmB1QK1Q=w644-h857-no?authuser=0" alt="" class="product-img">
+        <img src="https://i.postimg.cc/QMxh3Xvg/IMG-20201217-144234.jpg" alt="" class="product-img">
 
         <div class="product-info">
             <p>$35,00</p>
